--- a/Watchlist/Base.lproj/Main.storyboard
+++ b/Watchlist/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
         <!--Result View Controller-->
         <scene sceneID="l8P-BS-Wct">
             <objects>
-                <tableViewController id="Uzm-xn-dWZ" customClass="ResultViewController" customModule="Watchlist" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Uzm-xn-dWZ" customClass="resultViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="aL1-i4-AYL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
