--- a/Watchlist/Base.lproj/Main.storyboard
+++ b/Watchlist/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <constraint firstAttribute="width" constant="240" id="sgd-dG-OXl"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Search TV Show, or Movie" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDk-WZ-j3O">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Search for a Movie" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDk-WZ-j3O">
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" searchField="YES"/>
                                 </accessibility>
@@ -37,6 +37,7 @@
                                 <connections>
                                     <action selector="dismissKeyboard:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="sf6-OP-gsj"/>
                                     <action selector="searchTextDidChange:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="ZyG-tq-Sjt"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="oz9-AM-fFz"/>
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRM-hh-Kbs">
@@ -92,7 +93,7 @@
                                 <rect key="frame" x="0.0" y="92" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="S4a-a4-nG9" id="x0A-1k-uvI">
-                                    <frame key="frameInset" width="375" height="69"/>
+                                    <frame key="frameInset" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="248" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiH-Ub-R5o">
@@ -162,41 +163,41 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="z5C-MT-rIh">
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CIr-by-Lbs">
-                                        <frame key="frameInset" width="327" height="21"/>
+                                        <frame key="frameInset" width="333" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Director:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOM-En-At9">
-                                                <frame key="frameInset" width="105" height="21"/>
+                                                <frame key="frameInset" width="67" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9e-lz-zRl">
-                                                <frame key="frameInset" minX="113" width="214" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="O9e-lz-zRl">
+                                                <frame key="frameInset" minX="75" width="259" height="21"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lVi-0O-KKF">
-                                        <frame key="frameInset" minY="29" width="327" height="21"/>
+                                        <frame key="frameInset" minY="29" width="333" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Writers:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gI8-6k-Hwm">
-                                                <frame key="frameInset" width="105" height="21"/>
+                                                <frame key="frameInset" width="60" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuq-n6-msO">
-                                                <frame key="frameInset" minX="113" width="214" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="248" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cuq-n6-msO">
+                                                <frame key="frameInset" minX="68" width="265" height="21"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="G3S-9M-7bg">
-                                        <frame key="frameInset" minY="57" width="327" height="21"/>
+                                        <frame key="frameInset" minY="57" width="333" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Release Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JAj-4E-PVZ">
                                                 <frame key="frameInset" width="105" height="21"/>
@@ -205,25 +206,25 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnU-0b-HW0">
-                                                <frame key="frameInset" minX="113" width="214" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <frame key="frameInset" minX="113" width="220" height="21"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zAX-gM-tOr">
-                                        <frame key="frameInset" minY="86" width="327" height="21"/>
+                                        <frame key="frameInset" minY="86" width="333" height="21"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Genres:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6h-PP-IP6">
-                                                <frame key="frameInset" width="105" height="21"/>
+                                                <frame key="frameInset" width="60" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gd-iI-QoX">
-                                                <frame key="frameInset" minX="113" width="214" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gd-iI-QoX">
+                                                <frame key="frameInset" minX="68" width="265" height="21"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -233,7 +234,8 @@
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8wl-q4-GoW">
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUN-lu-Jm3">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" translatesAutoresizingMaskIntoConstraints="NO" id="C6n-V7-89S"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUN-lu-Jm3">
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -243,31 +245,30 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="gnU-0b-HW0" firstAttribute="leading" secondItem="cuq-n6-msO" secondAttribute="leading" id="4KS-g1-GcY"/>
-                                    <constraint firstItem="O9e-lz-zRl" firstAttribute="leading" secondItem="cuq-n6-msO" secondAttribute="leading" id="JoQ-Yy-6Do"/>
-                                    <constraint firstItem="5Gd-iI-QoX" firstAttribute="leading" secondItem="gnU-0b-HW0" secondAttribute="leading" id="dvn-em-aRI"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="z5C-MT-rIh" firstAttribute="leading" secondItem="YAi-mm-ZOX" secondAttribute="leadingMargin" constant="2" id="78s-yw-Ug8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="z5C-MT-rIh" secondAttribute="trailing" constant="8" id="CL1-hF-nGm"/>
+                            <constraint firstItem="5Gd-iI-QoX" firstAttribute="leading" secondItem="YAi-mm-ZOX" secondAttribute="leadingMargin" constant="70" id="F7q-qL-MRm"/>
                             <constraint firstItem="rPn-VI-aYZ" firstAttribute="top" secondItem="z5C-MT-rIh" secondAttribute="bottom" constant="8" id="NsY-WV-imr"/>
                             <constraint firstItem="z5C-MT-rIh" firstAttribute="top" secondItem="sMd-vB-zAk" secondAttribute="bottom" constant="8" id="TCm-RA-irW"/>
-                            <constraint firstItem="z5C-MT-rIh" firstAttribute="leading" secondItem="YAi-mm-ZOX" secondAttribute="leadingMargin" constant="8" id="z4g-0N-tQg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5Gd-iI-QoX" secondAttribute="trailing" constant="8" id="Vka-bW-sgd"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="gnU-0b-HW0" id="4Hh-TG-JkG"/>
                         <outlet property="directorLabel" destination="O9e-lz-zRl" id="rIh-SK-5fi"/>
-                        <outlet property="genreLabel" destination="5Gd-iI-QoX" id="I38-Wr-quE"/>
+                        <outlet property="genreLabel" destination="5Gd-iI-QoX" id="uao-1T-gBc"/>
+                        <outlet property="imageView" destination="C6n-V7-89S" id="6f9-OW-Hqm"/>
+                        <outlet property="overviewLabel" destination="kUN-lu-Jm3" id="Z0R-ky-JNQ"/>
                         <outlet property="writerLabel" destination="cuq-n6-msO" id="eKx-QM-yEr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xjr-e0-tEa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4417" y="583"/>
+            <point key="canvasLocation" x="4416.8000000000002" y="582.45877061469275"/>
         </scene>
         <!--Home-->
         <scene sceneID="Hyz-Hv-IvF">
